[metadata]
name = mlflow-export-import
author = Andre Mesarovic
description = Copy MLflow objects (experiments, runs or registered models) to another tracking server
version = attr: mlflow_export_import._version.__version__
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mlflow/mlflow-export-import
project_urls =
    Bug Tracker = https://github.com/mlflow/mlflow-export-import/issues
    Documentation = https://github.com/mlflow/mlflow-export-import/blob/master/README.md
    Source Code = https://github.com/mlflow/mlflow-export-import/
classifiers =
    License :: OSI Approved :: Apache Software License 2.0 (Apache-2.0)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
keywords =
    mlflow
    ai
    ml

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
install_requires =
    mlflow>=1.26.0
    click

[options.packages.find]
exclude =
    tests
    docs
    databricks_notebooks
    samples

[options.entry_points]
console_scripts =
    mlflow-export-import = mlflow_export_import.__main__:cli
